<resources>
    <string name="app_name">Test</string>
    <string name="txt_login">Login</string>
    <string name="txt_pass">Pass</string>
    <string name="auth_btn_txt">go</string>
    <string name="main_title">Help in finding</string>
    <string name="btn_comments">Comment</string>
    <string name="card_id">id</string>
    <string name="card_date_of_birth">date of birth</string>
    <string name="card_name">name</string>
    <string name="card_gender">gender</string>
    <string name="card_region">region</string>
    <string name="card_situation_description">situation description</string>
    <string name="card_time_of_loss">time of loss</string>
    <string name="card_time_of_request">time of request</string>
    <string name="card_status">status</string>
    <string name="btn_close">close</string>
    <string name="txt_btn_add_comment">add comment</string>
    <string name="txt_dialog_btn_close">close</string>
    <string name="txt_dialog_btn_send">send</string>
    <string name="logout">logout</string>
    <string name="new_request">new request</string>
    <string name="add_request">add request</string>
    <string name="card_child_description">child description</string>
    <string name="enter_date">ENTER DATE</string>
    <string name="choose_date">choose date</string>
    <string name="btn_ok">ок</string>
    <string name="enter_date_time"><![CDATA[ENTER DATE & TIME]]></string>
    <string name="choose_time">choose time</string>
    <string name="card_date_of_loss">date of loss</string>
    <string name="enter_time">ENTER TIME</string>
    <string name="card_to_time_of_loss"> + TIME</string>
    <string name="btn_update">update</string>
    <string name="btn_delete">delete</string>
    <string name="btn_remove">remove</string>


</resources>
