<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <GridLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:columnCount="2"
        android:orientation="horizontal"
        android:layout_marginRight="@dimen/request_card_margin_txt"
        android:layout_marginEnd="@dimen/request_card_margin_txt"
        android:layout_marginLeft="@dimen/request_card_margin_txt"
        android:layout_marginStart="@dimen/request_card_margin_txt"
        android:layout_marginTop="@dimen/request_card_margin_txt" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/card_id"/>

        <TextView
            android:id="@+id/fragment_card_txt_id"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/card_name"/>
        <TextView
            android:id="@+id/fragment_card_txt_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/card_date_of_birth"/>
        <TextView
            android:id="@+id/fragment_card_txt_date_of_birth"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/card_gender"/>
        <TextView
            android:id="@+id/fragment_card_txt_sex"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/card_region"/>
        <TextView
            android:id="@+id/fragment_card_txt_region"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/card_situation_description"/>
        <TextView
            android:id="@+id/fragment_card_txt_description"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/card_time_of_loss"/>
        <TextView
            android:id="@+id/fragment_card_txt_time_od_loss"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/card_time_of_request"/>
        <TextView
            android:id="@+id/fragment_card_txt_time_request"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/card_status"/>
        <TextView
            android:id="@+id/fragment_card_txt_status"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
    </GridLayout>

    <Button
        android:id="@+id/btn_get_comments"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:text="@string/btn_comments"/>
    <Button
        android:id="@+id/btn_close"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:text="@string/btn_close"/>
</RelativeLayout>