<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center">
   <LinearLayout
       android:layout_width="wrap_content"
       android:layout_height="wrap_content"
       android:orientation="vertical">
       <TextView
           android:text="@string/txt_login"
           style="@style/auth_txt"/>
       <EditText
           android:id="@+id/txt_login"
           style="@style/auth_field"/>

       <TextView
           android:text="@string/txt_pass"
           style="@style/auth_txt"/>

       <EditText
           android:id="@+id/txt_pass"
           style="@style/auth_field" />

       <Button
           android:id="@+id/auth_btn"
           android:layout_width="wrap_content"
           android:layout_height="wrap_content"
           android:layout_gravity="center_horizontal"
           android:layout_marginTop="@dimen/auth_btn_margin_top"
           android:text="@string/auth_btn_txt"/>
   </LinearLayout>

</RelativeLayout>